@@ -33,7 +33,7 @@ CSVQUOTE = ...
       <dt><dfn>CSVFS</dfn></dt>
       <dd>The field delimiter used in the resulting clean text record,
       initialized to a null character '\0'.</dd>
-      <dt><dfn>CSCOMMA</dfn></dt>
+      <dt><dfn>CSVCOMMA</dfn></dt>
       <dd>The default field delimiter of the CSV input text, initialized to
       comma ','.</dd>
       <dt><dfn>CSVQUOTE</dfn></dt>
