@@ -1,3 +1,8 @@
+2018-04-07         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* makeweb-*.sh, gawkextlib.css: Add style to all generated pages
+	  and HTML documents.
+
 2018-04-05         Manuel Collado       <m-collado@users.sourceforge.net>
 
 	* makeweb-md.sh: Reduce margins of PDF documents generated by pandoc.
