@@ -1,3 +1,7 @@
+2018-04-07         Manuel Collado        <m-collado@users.sourceforge.net>
+
+	* csvparse.xhtml: fix errata.
+
 2018-04-02         Manuel Collado        <m-collado@users.sourceforge.net>
 
 	* Errata: fix CSV instead of CVS in several places.
