@@ -1,3 +1,7 @@
+2018-04-07         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* webTOC: Remove extra line.
+
 2018-04-02         Manuel Collado       <m-collado@users.sourceforge.net>
 
 	* Development, README: Reformatted to be processed as markdown.
